Actually fix title.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Wmmakers.GitHub.io by WMMakers</title>
+    <title>West Michigan Makers</title>
   </head>
 
   <body>
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Wmmakers.GitHub.io</h1>
-            <h2>West Michigan Makers website</h2>
+            <h1>West Michigan Makers</h1>
+            <h2>Make Something Cool</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
