Use logos instead of a little list

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@ h2: Make Something Cool
 ---
 <h2 id="hang-out-with-us">Hang Out With Us!</h2>
 
-<ul>
-  <li><a href="https://wmmakers.slack.com/">Chat</a> (<a href="https://wmmakers-slackin.herokuapp.com/">Register</a>)</li>
-  <li><a href="https://groups.google.com/forum/#!forum/wmmakers">Mailing List</a></li>
+<ul class="tiled">
+  <li>
+    <a href="https://wmmakers-slackin.herokuapp.com/" title="Join us in Slack!">
+        <div><img src="/images/slack.svg" alt="Slack" width=118 height=118></div>
+        <div>Register on Slack</div>
+    </a>
+  </li>
+  <li>
+    <a href="https://groups.google.com/forum/#!forum/wmmakers">
+        <div><img src="" alt="Google Group" width=118 height=118></div>
+        <div>Google Group</div>
+    </a>
+  </li>
 </ul>
 
 
