Found image for groups

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: West Michigan Makers
 h1: West Michigan Makers
 h2: Make Something Cool
 ---
+<p><!--Group Description Here--></p>
+
 <h2 id="hang-out-with-us">Hang Out With Us!</h2>
 
 <ul class="tiled">
@@ -15,7 +17,7 @@ h2: Make Something Cool
   </li>
   <li>
     <a href="https://groups.google.com/forum/#!forum/wmmakers">
-        <div><img src="" alt="Google Group" width=118 height=118></div>
+        <div><img src="/images/groups.png" alt="Google Group" width=118 height=118></div>
         <div>Google Group</div>
     </a>
   </li>
