--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ h2: Make Something Cool
   <li>
     <a href="https://wmmakers-slackin.herokuapp.com/" title="Join us in Slack!">
         <div><img src="/images/slack.svg" alt="Slack" width=118 height=118></div>
-        <div>Register on Slack</div>
+        <div>Register for Slack</div>
     </a>
   </li>
   <li>
