--- a/index.html
+++ b/index.html
@@ -40,35 +40,18 @@ h2: Make Something Cool
 var eventsurl = "https://api.meetup.com/2/events?group_urlname=wmmakers&page=1&sig_id=49709362&sig=b91de95d611290d1ae9509a01535ac3faf903a16&callback=?";
  
  $(function() {
-        var group = '',
-            months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
-        function addLeadingZero( num ) {
-            return (num < 10) ? ('0' + num) : num;
-        }
+        // Thought about combining these two, decided not to.
         function getFormattedDate( millis ) {
+            var options = { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' };
             var date = new Date( millis );
-            return  months[date.getMonth()] + ' ' + addLeadingZero( date.getDate() ) + ', ' + date.getFullYear().toString();
+            return date.toLocaleDateString('en-US', options);
         }
         function getFormattedTime( millis ) {
-            var time = new Date( millis ),
-                    hours = time.getHours(),
-                    min = time.getMinutes(),
-                    ampm = (hours > 11) ? 'PM' : 'AM';
-            min = (min < 10) ? ('0' + min) : min;
-            hours = (hours == 0) ? 1 : hours;
-            hours = (hours > 12) ? hours-12 : hours;
-            return hours + ':' + min + ' ' + ampm;
+            var options = { hour: 'numeric', minute: '2-digit' };
+            var date = new Date( millis );
+            return date.toLocaleTimeString('en-US', options);
         }
-        function numberFormat(nStr){
-              nStr += '';
-              x = nStr.split('.');
-              x1 = x[0];
-              x2 = x.length > 1 ? '.' + x[1] : '';
-              var rgx = /(\d+)(\d{3})/;
-              while (rgx.test(x1))
-                x1 = x1.replace(rgx, '$1' + ',' + '$2');
-              return x1 + x2;
-        };
+
         $.getJSON(eventsurl, function(data) {
             if (data.status && data.status.match(/^200/) == null) {
                 console.error(data.status + ": " + data.details);
