Don't need that id...

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h2: Make Something Cool
 
 <p class=sponsor><a href="http://axislab3d.com/"><img src="/images/axislab-full-black-400.png" alt="AxisLab 3D Printing"></a></p>
 
-<script id="config" type="text/javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
 // Full URL is needed for CORS
 var eventsurl = "https://api.meetup.com/2/events?group_urlname=wmmakers&page=1&sig_id=49709362&sig=b91de95d611290d1ae9509a01535ac3faf903a16&callback=?";
  
