--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@ h2: Make Something Cool
         <div>Google Group</div>
     </a>
   </li>
+  <li>
+    <a href="https://www.facebook.com/westmichiganmakers">
+        <div><img src="/images/facebook.png" alt="Facebook" width=118 height=118></div>
+        <div>Facebook page</div>
+    </a>
+  </li>
 </ul>
 
 
